--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{placeins}
+\usepackage{enumitem}
 \usepackage{hyperref}
 \usepackage{algorithmic}
 \usepackage{tabularx}
@@ -55,8 +56,8 @@ Complexity Theory, Counting Complexity, Hazard-Free Circuits, PPAD, Search Probl
 
 \section{Conclusion} 
 \input{sections/conclusion}
-
+    
 \bibliographystyle{IEEEtran}
-\bibliography{references}
+\bibliography{dissertation}
 
 \end{document}
