--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,9 @@
-\documentclass[onecolumn]{IEEEtran}
+\documentclass{IEEEtran}
 \IEEEoverridecommandlockouts
 % The preceding line is only needed to identify funding in the first footnote. If that is unneeded, please comment it out.
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
+\usepackage{lipsum}
 \usepackage{placeins}
 \usepackage{enumitem}
 \usepackage{hyperref}
@@ -37,7 +38,7 @@ u2018918@live.warwick.ac.uk, u2018918}}
 \end{abstract}
 
 \begin{IEEEkeywords} % Index 
-Complexity Theory, Counting Complexity, Hazard-Free Circuits, PPAD, Search Problems
+    Complexity Theory, Counting Complexity, Hazard Free Circuits, TFNP, PPAD, Search Problems, Kleene Logic
 \end{IEEEkeywords}
 
 \section{Introduction}
