--- a/dissertation.bib
+++ b/dissertation.bib
@@ -471,6 +471,16 @@
   file = {/Users/christosdemetriou/Zotero/storage/LXI76F24/Ji et al. - 2022 - MIP=RE.pdf;/Users/christosdemetriou/Zotero/storage/VBEK5L4J/2001.html}
 }
 
+@book{kozen2006theory,
+  title = {Theory of Computation},
+  author = {Kozen, D.C.},
+  year = {2006},
+  series = {Texts in Computer Science},
+  publisher = {Springer London},
+  isbn = {978-1-84628-297-3},
+  lccn = {2005937504}
+}
+
 @article{merkleHidingInformationSignatures1978,
   title = {Hiding Information and Signatures in Trapdoor Knapsacks},
   author = {Merkle, R. and Hellman, M.},
