--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,8 @@
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 \newtheorem{theorem}{Theorem}[section]
+\newtheorem{conjecture}{Theorem}[section]
+\newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{definition}{Definition}[section]
@@ -43,8 +45,6 @@ u2018918@live.warwick.ac.uk, u2018918}}
 
 \section{Introduction}
 \input{sections/intro}
-
-\section{Aims and Objectives}
 
 \section{Preliminaries and Background review}
 \input{sections/lit_review}
