--- a/sections/lit_review.tex
+++ b/sections/lit_review.tex
@@ -1,1 +1,8 @@
 % LTeX: enabled=true
+
+As mentioned in the introduction, the current project works as an interaction
+of three different fields: 1. counting complexity and combinatorial interpretation, 
+2. total search problems and PPAD and 3. Kleene logic.
+
+
+
