--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,11 @@
-\documentclass{IEEEtran}
+\documentclass[onecolumn]{IEEEtran}
 \IEEEoverridecommandlockouts
 % The preceding line is only needed to identify funding in the first footnote. If that is unneeded, please comment it out.
 \usepackage{cite}
-\usepackage{amsmath,amssymb,amsfonts}
+\usepackage{svg}
+\usepackage{bookmark}
+\usepackage{subfig}
+\usepackage{amsmath,amssymb,amsfonts, amsthm}
 \usepackage{lipsum}
 \usepackage{placeins}
 \usepackage{enumitem}
@@ -15,13 +18,17 @@
 \usepackage{tikz}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
-
+%
 \newtheorem{theorem}{Theorem}[section]
-\newtheorem{conjecture}{Theorem}[section]
+\newtheorem{conjecture}[theorem]{Conjecture}
 \newtheorem{proposition}[theorem]{Proposition}
-\newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{claim}[theorem]{Claim}
+\newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{definition}{Definition}[section]
+
+\newcommand{\scn}[1]{\textnormal{\textsc{#1}}}
+    
     
 \begin{document}
 
@@ -48,6 +55,9 @@ u2018918@live.warwick.ac.uk, u2018918}}
 
 \section{Preliminaries and Background review}
 \input{sections/lit_review}
+
+\section{Current Progress}
+\input{sections/main_findings}
 
 \section{Research Methodology} 
 \input{sections/methodology}
