--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -1,16 +1,16 @@
 Over the last couple of years, there has been a revolutionary
 initiative in the field of combinatronics.
-Combinatronics has been a field of study in mathematics that primarly focused on
+Combinatronics has been a field of study in mathematics that primarily focused on
 the notion of counting objects with certain properties. Over time, this notion
 has shifted, especially in the subfield of algebraic combinatronics, where
-there is no clear notion of the object that we are counting
+there is no clear notion of the object that we are counting,
 and the numbers express something more abstract \cite{pakWhatCombinatorialInterpretation2022}. %% Add the other two missing papers: Igors and the other guy
 This gave a need to be able to assign a combinatorial interpretation to such numbers, or
-more simply, do these numbers correpsond to some counting over a set of objects.
+more simply, do these numbers correspond to some counting over a set of objects.
 Being able to find such definitions or interpretations can be very important,
 it allows us to utilise tools from combinatronics as well as allow us to understand
 and reveal hidden structures and properties for such numbers \cite{pakWhatCombinatorialInterpretation2022}. 
-Moreover there are several problems or numbers such as \textit{Kronecker coefficients},
+Moreover, there are several problems or numbers such as \textit{Kronecker coefficients},
 whose combinatorial interpretation, would give a step towards the resolution of the $\textit{P} \neq \textit{NP}$
 conjecture \cite{ikenmeyerWhatWhatNot2022a}.
 
@@ -42,8 +42,9 @@ We hope to demonstrate that such problem could help us bound, the
 counting complexity limits of $\textbf{\#}\text{PureCircuit} -1$.
 
 \subsection{Project objectives}
+
 Below we will present our table of objectives. We will denote updated objectives with
-*, new objectives with (!), completed objectives with (\checkmark),  deleted objectives with (-).
+(*), new objectives with (!), completed objectives with (\checkmark),  deleted objectives with (-).
 
 \begin{enumerate}[label*=R.\arabic*)]
     \item (\checkmark) Find a parsimonious reduction from the $\textit{EndOfLine}$ to $\textit{EndOfLine}$.
@@ -51,11 +52,11 @@ Below we will present our table of objectives. We will denote updated objectives
     \item (!) Demonstrate that $\textbf{\#}\text{PPAD}(PureCircuit)- 1 \not\subseteq \textbf{\#P}$
     \item (*) Prove or disprove the following $\forall n \in \mathbb{N}_{\geq 2}$:
 \[
-\!\!\!\! \exists c \in \mathbb{N}:  \#\textsc{SourceOrExcess}(n, 1) \subseteq^c \#\textsc{PureCircuit}
+\!\!\!\! \exists c \in \mathbb{N}:  \scn{\#SourceOrExcess}(n, 1) \subseteq^c \scn{PureCircuit}
 \]
 \item (*) Prove or disprove the following claim: $\forall L \in \textbf{PPAD}$
     $$
-    \exists c \in \mathbb{N}: \#L \subseteq^c \#\textsc{PureCircuit}
+    \exists c \in \mathbb{N}: \#L \subseteq^c \scn{\#PureCircuit}
     $$
 \end{enumerate}
 
@@ -76,24 +77,10 @@ the current ones as well as general reflections.
 
 Below we will present our main list of findings up to this point:
 
-\begin{definition}[Poly-Function Bounded Parsimonious Reductions]
-    Given two counting problems $A, B : \{0,1\}* \to \mathbb{N}$
-    and a function $f : {0,1}^{*} \to \mathbb{N}$ such that $f \in n^{O(1)}$, we
-    say that:
-    $$
-    A \subseteq^f B
-    $$
-    If for input $w \in \{0,1\}^*$, if $a$ represent the number of solutions
-    for problem $A$ and $b$ the number of solutions for problem $B$, we have:
-    $$
-    a \leq b \leq f(|w|) \cdot a
-    $$
-\end{definition}
-
 \begin{theorem}[ND-Brouwer to PureCircuit]
     Given $f(x) \triangleq 20$
     $$
-    \textbf{\#}\textsc{Brouwer}^{f_3} \subset^f \textbf{\#}\textsc{PureCircuit}
+    \scn{\#Brouwer}^{f_3} \subset^f \scn{\#PureCircuit}
     $$
 \end{theorem}
 
@@ -101,19 +88,20 @@ Below we will present our main list of findings up to this point:
     For any $d \in \mathbb{N}_{\geq 2}$, we can define $f(\cdot) = \sum_{i = 1}^{d -1}  \binom{d}{i} 2^i$
     such that:
     $$
-    \textbf{\#}\textsc{Brouwer}^{d} \subset^f \textbf{\#}\textsc{PureCircuit}
+    \scn{\#Brouwer}^{d} \subset^f \scn{\#PureCircuit}
     $$ 
 \end{corollary}
 
 
 
-\begin{conjecture}
+\begin{theorem}
     For any $d \in \mathbb{N}_{\geq 2}$, we can define $f(\cdot) = 5$
     such that:
     $$
-    \textbf{\#}\textsc{Brouwer}^{d} \subset^f \textbf{\#}\textsc{PureCircuit}
+    \scn{\#Brouwer}^d \subseteq^f \scn{\#PureCircuit}
     $$ 
-\end{conjecture}
+\end{theorem}
+
 
 Throughout our search, we stumbled upon
 various variants of the problem as well as reductions and claims from other
@@ -123,18 +111,18 @@ subclasses of PPAD or Hazard-Free logic
     Weaker variants of PureCircuit can result to parsimonious reductions to the EndOfLine problem
     as such:
     \begin{gather*}
-        \textsc{\#AcyclicBPureCircuit} \subseteq \textsc{\#EndOfLine} \\
-        \textsc{\#PermutationFreeBPureCircuit} \subseteq \textsc{\#EndOfLine}
+        \scn{\#AcyclicBPureCircuit} \subseteq \scn{\#EndOfLine} \\
+        \scn{\#PermutationFreeBPureCircuit} \subseteq \scn{\#EndOfLine}
     \end{gather*}
 \end{proposition}
 
 
 In addition, we were able to show that for different promise problems,
 we can find reductions to the PureCircuit problem
-
+%
 \begin{proposition}
     $$
-        \textsc{\#PUnsatHazard} \subseteq  \textsc{\#PureCircuit}
+        \scn{\#PUnsatHazard} \subseteq  \scn{\#PureCircuit}
     $$
 \end{proposition}
 
@@ -147,16 +135,17 @@ $$
 \exists x^\star \in \mathbb{T}^n: F(x^\star) = x^\star
 $$
 \end{proposition}
-
+%
 
 The idea above is based on the Tarski Fixed point theorem.
 Using fixed points with the Kleene logic set, has been used in the past
 by Kozer as seen in his book \cite{kozen2006theory}, but we
 are extending such ideas to any possible functions or gates
-that use monotone gates. Doing that allows us to make the following observation
+that use monotone gates. Doing that allows us to make the following observation.
 
 \begin{proposition}
     $$
-    \textsc{\#HazardTarski} \subseteq \textsc{\#PureCircuit}
+    \scn{\#HazardTarski} \subseteq \scn{\#PureCircuit}
     $$
 \end{proposition}
+
