--- a/main.tex
+++ b/main.tex
@@ -2,23 +2,21 @@
 \IEEEoverridecommandlockouts
 % The preceding line is only needed to identify funding in the first footnote. If that is unneeded, please comment it out.
 \usepackage{cite}
-\usepackage{svg}
-\usepackage{bookmark}
-\usepackage{subfig}
+\usepackage{lineno}
 \usepackage{amsmath,amssymb,amsfonts, amsthm}
-\usepackage{lipsum}
-\usepackage{placeins}
 \usepackage{enumitem}
+\usepackage{placeins}
 \usepackage{hyperref}
 \usepackage{algorithmic}
 \usepackage{tabularx}
 \usepackage{graphicx}
+\usepackage{lipsum}
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage{tikz}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
-%
+
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{conjecture}[theorem]{Conjecture}
 \newtheorem{proposition}[theorem]{Proposition}
@@ -28,8 +26,9 @@
 \newtheorem{definition}{Definition}[section]
 
 \newcommand{\scn}[1]{\textnormal{\textsc{#1}}}
-    
-    
+
+\linen
+
 \begin{document}
 
 \title{Counting Problem of \textit{PureCircuit}}
