--- a/sections/main_findings.tex
+++ b/sections/main_findings.tex
@@ -2,3 +2,4 @@
 \input{sections/current_progress/theory_progress}
 
 \subsection{Software Progress}
+\input{sections/current_progress/soft_progress.tex}
