--- a/dissertation.bib
+++ b/dissertation.bib
@@ -281,6 +281,22 @@
   file = {/Users/christosdemetriou/Zotero/storage/T2B38K7U/Fearnley et al. - 2021 - The complexity of gradient descent CLS = PPAD ∩ PLS.pdf}
 }
 
+@article{fearnleyUniqueEndPotential2020,
+  title = {Unique End of Potential Line},
+  author = {Fearnley, John and Gordon, Spencer and Mehta, Ruta and Savani, Rahul},
+  year = {2020},
+  month = dec,
+  journal = {Journal of Computer and System Sciences},
+  volume = {114},
+  pages = {1--35},
+  issn = {0022-0000},
+  doi = {10.1016/j.jcss.2020.05.007},
+  urldate = {2025-07-04},
+  abstract = {The complexity class CLS was proposed by Daskalakis and Papadimitriou in 2011 to understand the complexity of important NP search problems that admit both path following and potential optimizing algorithms. Here we identify a subclass of CLS -- called UniqueEOPL -- that applies a more specific combinatorial principle that guarantees unique solutions. We show that UniqueEOPL contains several important problems such as the P-matrix Linear Complementarity Problem, finding fixed points of Contraction Maps, and solving Unique Sink Orientations (USOs). We identify a problem -- closely related to solving contraction maps and USOs -- that is complete for UniqueEOPL.},
+  keywords = {Continuous local search,Contraction map,P-matrix Linear Complementarity Problem,TFNP,Total search problems,Unique sink orientation},
+  file = {/Users/christosdemetriou/Zotero/storage/KZJ78DYD/Fearnley et al. - 2020 - Unique end of potential line.pdf;/Users/christosdemetriou/Zotero/storage/T3QYZMNB/S0022000020300520.html}
+}
+
 @article{fennerGapdefinableCountingClasses1994,
   title = {Gap-Definable Counting Classes},
   author = {Fenner, Stephen A. and Fortnow, Lance J. and Kurtz, Stuart A.},
