--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -45,21 +45,18 @@ counting complexity limits of $\textbf{\#}\text{PureCircuit} -1$.
 
 Below we will present our table of objectives. We will denote updated objectives with
 (*), new objectives with (!), completed objectives with (\checkmark),  deleted objectives with (-).
-%
-% \begin{enumerate}[label*=R.\arabic*)]
-%     \item (\checkmark) Find a parsimonious reduction from the $\textit{EndOfLine}$ to $\textit{EndOfLine}$.
-%     \item (!) Improve the combinatorial bound between the reduction from EndOfLine to PureCircuit
-%     \item (!) Demonstrate that $\textbf{\#}\text{PPAD}(PureCircuit)- 1 \not\subseteq \textbf{\#P}$
-%     \item (*) Prove or disprove the following $\forall n \in \mathbb{N}_{\geq 2}$:
-% \[
-% \exists c \in \mathbb{N}:  \scn{\#SourceOrExcess}(n, 1) \subseteq^c \scn{PureCircuit}
-% \]
-% \item (*) Prove or disprove the following claim: $\forall L \in \textbf{PPAD}$
-%     $$
-%     \exists c \in \mathbb{N}: \#L \subseteq^c \scn{\#PureCircuit}
-%     $$
-% \end{enumerate}
-%
+
+\begin{enumerate}[label*=R.\arabic*)]
+    \item (\checkmark) Find a parsimonious reduction from the $\textit{EndOfLine}$ to $\textit{EndOfLine}$.
+    \item (!) Improve the combinatorial bound between the reduction from EndOfLine to PureCircuit
+    \item (!) Demonstrate that $\textbf{\#}\text{PPAD}(PureCircuit)- 1 \not\subseteq \textbf{\#P}$
+    \item (*) Prove or disprove the following $\forall n \in \mathbb{N}_{\geq 2}$:
+\[
+\exists c \in \mathbb{N}:  \scn{\#SourceOrExcess}(n, 1) \subseteq^c \scn{PureCircuit}
+\]
+
+\end{enumerate}
+
 Below we will be representing the development portion of the project.
 
 \begin{enumerate}[label=S.\arabic*)]
@@ -73,79 +70,97 @@ We will compile the rest of the report, based on our current findings, how we mo
 the current ones as well as general reflections.
 
 
-\subsection{Core set of results}
+\subsection{Research Question}
 
-Below we will present our main list of findings up to this point:
-
-\begin{theorem}[ND-Brouwer to PureCircuit]
-    Given $f(x) \triangleq 20$
+Our main objectives lead to the following conjecture:
+\begin{conjecture}[$\scn{\#PPAD}-1$ hardness]
+    \label{conj:core-conj}
+    We conjecture that proposition that every language in $\scn{\#PPAD}-1$
+    can be parsimoniously reduced up to some polynomial factor to  $\scn{\#PureCircuit} -1$.
+    We express that idea more formally as such:
     $$
-    \scn{\#Brouwer}^{f_3} \subset^f \scn{\#PureCircuit}
+    \forall L \in \textsc{PPAD}, \exists f \in n^{O(1)}: 
+    \#L -1 \subseteq^f \scn{\#PureCircuit} -1
     $$
-\end{theorem}
+\end{conjecture}
 
-\begin{corollary}
-    For any $d \in \mathbb{N}_{\geq 2}$, we can define $f(\cdot) = \sum_{i = 1}^{d -1}  \binom{d}{i} 2^i$
-    such that:
-    $$
-    \scn{\#Brouwer}^{d} \subset^f \scn{\#PureCircuit}
-    $$ 
-\end{corollary}
+The conjecture \ref{conj:core-conj} captures the essence of our work. Being
+able to finding such relations will allow us to understand in greater depth the complexities
+behind $\scn{\#TFNP} - 1$ class.
 
 
-
-\begin{theorem}
-    For any $d \in \mathbb{N}_{\geq 2}$, we can define $f(\cdot) = 5$
-    such that:
-    $$
-    \scn{\#Brouwer}^d \subseteq^f \scn{\#PureCircuit}
-    $$ 
-\end{theorem}
-
-
-Throughout our search, we stumbled upon
-various variants of the problem as well as reductions and claims from other
-subclasses of PPAD or Hazard-Free logic
-
-\begin{proposition}
-    Weaker variants of PureCircuit can result to parsimonious reductions to the EndOfLine problem
-    as such:
-    \begin{gather*}
-        \scn{\#AcyclicBPureCircuit} \subseteq \scn{\#EndOfLine} \\
-        \scn{\#PermutationFreeBPureCircuit} \subseteq \scn{\#EndOfLine}
-    \end{gather*}
-\end{proposition}
-
-
-In addition, we were able to show that for different promise problems,
-we can find reductions to the PureCircuit problem
 %
-\begin{proposition}
-    $$
-        \scn{\#PUnsatHazard} \subseteq  \scn{\#PureCircuit}
-    $$
-\end{proposition}
-
-Lastly we introduce the following proposition
-\begin{proposition}
-    Given function $F: \mathbb{T}^n \to \mathbb{T}^n$
-    where $\mathbb{T} \triangleq \{0, 1, \bot\}$ and $F$ is a \textbf{natural}
-    function:
-$$
-\exists x^\star \in \mathbb{T}^n: F(x^\star) = x^\star
-$$
-\end{proposition}
+% Below we will present our main list of findings up to this point:
 %
-
-The idea above is based on the Tarski Fixed point theorem.
-Using fixed points with the Kleene logic set, has been used in the past
-by Kozer as seen in his book \cite{kozen2006theory}, but we
-are extending such ideas to any possible functions or gates
-that use monotone gates. Doing that allows us to make the following observation.
-
-\begin{proposition}
-    $$
-    \scn{\#HazardTarski} \subseteq \scn{\#PureCircuit}
-    $$
-\end{proposition}
-
+% \begin{theorem}[ND-Brouwer to PureCircuit]
+%     Given $f(x) \triangleq 20$
+%     $$
+%     \scn{\#Brouwer}^{f_3} \subset^f \scn{\#PureCircuit}
+%     $$
+% \end{theorem}
+%
+% \begin{corollary}
+%     For any $d \in \mathbb{N}_{\geq 2}$, we can define $f(\cdot) = \sum_{i = 1}^{d -1}  \binom{d}{i} 2^i$
+%     such that:
+%     $$
+%     \scn{\#Brouwer}^{d} \subset^f \scn{\#PureCircuit}
+%     $$ 
+% \end{corollary}
+%
+%
+%
+% \begin{theorem}
+%     For any $d \in \mathbb{N}_{\geq 2}$, we can define $f(\cdot) = 5$
+%     such that:
+%     $$
+%     \scn{\#Brouwer}^d \subseteq^f \scn{\#PureCircuit}
+%     $$ 
+% \end{theorem}
+%
+%
+% Throughout our search, we stumbled upon
+% various variants of the problem as well as reductions and claims from other
+% subclasses of PPAD or Hazard-Free logic
+%
+% \begin{proposition}
+%     Weaker variants of PureCircuit can result to parsimonious reductions to the EndOfLine problem
+%     as such:
+%     \begin{gather*}
+%         \scn{\#AcyclicBPureCircuit} \subseteq \scn{\#EndOfLine} \\
+%         \scn{\#PermutationFreeBPureCircuit} \subseteq \scn{\#EndOfLine}
+%     \end{gather*}
+% \end{proposition}
+%
+%
+% In addition, we were able to show that for different promise problems,
+% we can find reductions to the PureCircuit problem
+% %
+% \begin{proposition}
+%     $$
+%         \scn{\#PUnsatHazard} \subseteq  \scn{\#PureCircuit}
+%     $$
+% \end{proposition}
+%
+% Lastly we introduce the following proposition
+% \begin{proposition}
+%     Given function $F: \mathbb{T}^n \to \mathbb{T}^n$
+%     where $\mathbb{T} \triangleq \{0, 1, \bot\}$ and $F$ is a \textbf{natural}
+%     function:
+% $$
+% \exists x^\star \in \mathbb{T}^n: F(x^\star) = x^\star
+% $$
+% \end{proposition}
+% %
+%
+% The idea above is based on the Tarski Fixed point theorem.
+% Using fixed points with the Kleene logic set, has been used in the past
+% by Kozer as seen in his book \cite{kozen2006theory}, but we
+% are extending such ideas to any possible functions or gates
+% that use monotone gates. Doing that allows us to make the following observation.
+%
+% \begin{proposition}
+%     $$
+%     \scn{\#HazardTarski} \subseteq \scn{\#PureCircuit}
+%     $$
+% \end{proposition}
+%
