--- a/sections/current_progress/soft_progress.tex
+++ b/sections/current_progress/soft_progress.tex
@@ -1,44 +1,5 @@
-Our project also includes the development of a visualisation tool for creation
-and verification of several \textsc{PureCircuit} instances. We will use the
-figure \ref{fig:soft:workflow} for main reference. We opted with \textit{Rust},
-as the main language of development, due to its high and low level features.
-From the one hand, \textit{Rust} can efficiently handle memory allocation safely
-with its clever usage of the Borrower-Ownership framework. Conversely, it implements
-a strongly typed system with help of generics, associated types and algebraic types
-allowing us to create a versatile and compact library. Given the above, we utilise
-techniques such as \texttt{Proptest}, where we create strategic randomized tests
-that check whether  function follows an expected property. On the other hand
-we make use of \texttt{Petgraph}, which is a sophisticated library that handles
-graph-like structures in \textit{Rust}.
-
-
-
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.35\textwidth]{assets/software-visualisation.png}
-    \caption{Application workflow with respect to the libraries and dependencies use}
-    \label{fig:soft:workflow}
-\end{figure}
-
-
-For visualisation we decided to go with \textit{Bevy}. \textit{Bevy} is a
-game engine that uses the \textit{ECS} software achitecture. A general
-workflow of an \textit{ECS} system can be described as such: a state 
-contains entities, each of which is composed of components or properties.
-A system is a specialised method that gathers entities based on their components
-and describes an interaction between them. This whole process can be visualised
-in the figure \ref{fig:soft:ecs-workflow}
-
-
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.35\textwidth]{assets/ECS-visualisatoin.png}
-    \caption{ECS workflow visualisation}
-    \label{fig:soft:ecs-workflow}
-\end{figure}
-
-\subsubsection{Current Progress}
-
+In our project we are also focused on developing a visualisation tool
+for \textsc{PureCircuit} instances. 
 In our introduction we referred to three main objectives. As of time of writing
 we are close to the completion of the first one. We will provide a table of
 objectives that have been achieved, as well as the remaining requirements needed
